scroll bar fix on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,31 +10,28 @@
   }
 }
 /* Chrome, Edge and Safari */
-*::-webkit-scrollbar {
-  height: 10px;
-  width: 6px;
-}
-*::-webkit-scrollbar-track {
-  background-color: #dfe9eb;
-}
-
-*::-webkit-scrollbar-track:hover {
-  background-color: #b8c0c2;
-}
-
-*::-webkit-scrollbar-track:active {
-  background-color: #b8c0c2;
-}
-
-*::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background-color: #0369a1;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background-color: #0c4a6e;
-}
-
-*::-webkit-scrollbar-thumb:active {
-  background-color: #0c4a6e;
+@media only screen and (min-width: 1024px) {
+  *::-webkit-scrollbar {
+    height: 10px;
+    width: 6px;
+  }
+  *::-webkit-scrollbar-track {
+    background-color: #dfe9eb;
+  }
+  *::-webkit-scrollbar-track:hover {
+    background-color: #b8c0c2;
+  }
+  *::-webkit-scrollbar-track:active {
+    background-color: #b8c0c2;
+  }
+  *::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #0369a1;
+  }
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #0c4a6e;
+  }
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #0c4a6e;
+  }
 }
